[package]
name = "executor-core"
edition = "2021"
version = "0.1.0"

[dependencies]
solana-bpf-loader-program = "1.14.7"
solana-client = "1.14.7"
solana-ledger = "1.14.7"
solana-program = "1.14.7"
solana-runtime = "1.14.7"
solana-sdk = "1.14.7"
solana-transaction-status = "1.14.7"
bincode = "1.3.3"
itertools = "0.10.5"
rand = "0.7.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
anyhow = "1.0.66"
executor-client = { path = "../client" }
