[package]
name = "example"
edition = "2021"
version = "0.1.0"

[dependencies]
executor-client-gen = { path = "../client-gen" }
solana-sdk = "1.14.7"
solana-transaction-status = "1.14.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
